[package]
name = "lunistice-auto-splitter"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
asr-dotnet = { path = "asr-dotnet", features = ["il2cpp"] }
arrayvec = { version = "0.7.2", default-features = false }
spinning_top = "0.2.3"
itoa = { version = "1.0.1", default-features = false }
bytemuck = { version = "1.9.1", features = ["derive", "min_const_generics"] }

[lib]
crate-type = ["cdylib"]

[profile.release]
lto = true
panic = "abort"
strip = true

[profile.release.build-override]
opt-level = 0
