[package]
name = "lunistice-auto-splitter"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
asr = { git = "https://github.com/LiveSplit/asr", features = ["derive", "unity"] }
arrayvec = { version = "0.7.2", default-features = false }
itoa = { version = "1.0.1", default-features = false }
bytemuck = { version = "1.9.1", features = ["derive", "min_const_generics"] }

[lib]
crate-type = ["cdylib"]

[profile.release]
lto = true
panic = "abort"
codegen-units = 1
strip = true

[profile.release.build-override]
opt-level = 0

[features]
nightly = []
