[package]
name = "asr-dotnet"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
asr = { git = "https://github.com/CryZe/asr" }
bytemuck = { version = "1.9.1", features = ["derive", "min_const_generics"] }
bstr = { version = "1.0.1", default-features = false }
asr-dotnet-derive = { path = "asr-dotnet-derive" }

[features]
il2cpp = ["asr-dotnet-derive/il2cpp"]
